# scrape-my-wechat-official-account

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTENT_LICENSE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  env.json  env.json.EXAMPLE  pyproject.toml  requirements.txt  style_training_README.md  test_lora.py  train_lora.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config-management.md  documentation-enhancement.md  feature_request.md  performance-optimization.md
.github/workflows/: ci.yml  codeql.yml
Wechat-Backup/文不加点的张衔瑜/: _state.json  action_suggestion.md  克隆效率.json  克隆效率.md  合集.md  目录.auto.md  目录.md  目录.md.backup2
Wechat-Backup/文不加点的张衔瑜/2017/2017-07-31_破蛋推_衔瑜今天成年啦！！！/: 2017-07-31_破蛋推_衔瑜今天成年啦！！！.html  2017-07-31_破蛋推_衔瑜今天成年啦！！！.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-01_衔瑜小札_2017.07.31/: 2017-08-01_衔瑜小札_2017.07.31.html  2017-08-01_衔瑜小札_2017.07.31.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-02_衔瑜攻略_2017.08.02/: 2017-08-02_衔瑜攻略_2017.08.02.html  2017-08-02_衔瑜攻略_2017.08.02.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-03_衔瑜文艺_好久不见/: 2017-08-03_衔瑜文艺_好久不见.html  2017-08-03_衔瑜文艺_好久不见.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-04_衔瑜训诂_说尬/: 2017-08-04_衔瑜训诂_说尬.html  2017-08-04_衔瑜训诂_说尬.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-06_衔瑜脑洞_五条衔瑜 鱼目混珠/: 2017-08-06_衔瑜脑洞_五条衔瑜 鱼目混珠.html  2017-08-06_衔瑜脑洞_五条衔瑜 鱼目混珠.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-08_公号写了一周了  可是人设还没有出来/: 2017-08-08_公号写了一周了  可是人设还没有出来.html  2017-08-08_公号写了一周了  可是人设还没有出来.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-11_杂感/: 2017-08-11_杂感.html  2017-08-11_杂感.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-20_留下尬走的足迹_杭州/: 2017-08-20_留下尬走的足迹_杭州.html  2017-08-20_留下尬走的足迹_杭州.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-22_留下尬走的足迹_苏州/: 2017-08-22_留下尬走的足迹_苏州.html  2017-08-22_留下尬走的足迹_苏州.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-23_留下尬走的足迹_上海/: 2017-08-23_留下尬走的足迹_上海.html  2017-08-23_留下尬走的足迹_上海.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-08-25_留下的尬走足迹_大连/: 2017-08-25_留下的尬走足迹_大连.html  2017-08-25_留下的尬走足迹_大连.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-09-01_留下的尬走足迹_香港/: 2017-09-01_留下的尬走足迹_香港.html  2017-09-01_留下的尬走足迹_香港.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-09-17_子龙一身都是胆 我一身都是肝/: 2017-09-17_子龙一身都是胆 我一身都是肝.html  2017-09-17_子龙一身都是胆 我一身都是肝.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-09-21_奶茶要不啦~奶茶/: 2017-09-21_奶茶要不啦~奶茶.html  2017-09-21_奶茶要不啦~奶茶.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-09-24_一周之内  而气候不齐/: 2017-09-24_一周之内  而气候不齐.html  2017-09-24_一周之内  而气候不齐.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-10-02_化学生的求生攻略/: 2017-10-02_化学生的求生攻略.html  2017-10-02_化学生的求生攻略.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-10-05_从狼人杀看《李尔王》/: 2017-10-05_从狼人杀看《李尔王》.html  2017-10-05_从狼人杀看《李尔王》.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-10-06_几件小事/: 2017-10-06_几件小事.html  2017-10-06_几件小事.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-10-21_想讨论点关于教育的事/: 2017-10-21_想讨论点关于教育的事.html  2017-10-21_想讨论点关于教育的事.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-10-29_在油腻的生活中诗意地栖居/: 2017-10-29_在油腻的生活中诗意地栖居.html  2017-10-29_在油腻的生活中诗意地栖居.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-11-02_11.02 听说这样play tricks的都脱团了/: 2017-11-02_11.02 听说这样play tricks的都脱团了.html  2017-11-02_11.02 听说这样play tricks的都脱团了.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-11-08_无以言表的集体感/: 2017-11-08_无以言表的集体感.html  2017-11-08_无以言表的集体感.md  meta.json
Wechat-Backup/文不加点的张衔瑜/2017/2017-11-10_今年双十一也没点长进吗/: 2017-11-10_今年双十一也没点长进吗.html  2017-11-10_今年双十一也没点长进吗.md  meta.json
analysis/: ACADEMIC_DOCUMENTATION.md  CONTRIBUTING.md  README.md  README_analysis.md  README_wordcloud.md  USAGE_DEMO.md  USAGE_SIMPLE.md  WORDCLOUD_GUIDE.md  app_wordcloud.py  app_wordcloud_simple.py  benchmark_wordcloud.py  data_loader.py  data_loader_simple.py  demo.py  enhanced_wordcloud_viz.py  evaluation_metrics.py  extract_wordcloud_data.py  generate_wordclouds.py  main.py  main_old.py  performance_robustness.py  requirements.txt  run_checks.py  test_integration.py  test_mock.py  test_optimizations.py  text_pipeline.py  validate.py
analysis/assets/: chinese_phrases.txt  stopwords_zh.txt
analysis/data/: allow_singletons.zh.txt  fonts.json  sample_articles.json  stopwords.en.txt  stopwords.zh.txt  tech_terms.txt  user_dict.zh.txt
analysis/notebooks/: linguistic_report.ipynb
analysis/pipeline/: advanced_analysis.py  corpus_io.py  enhanced_tokenizer.py  ngrams.py  performance.py  report.py  report_old.py  stats.py  tokenize.py  tokenizer.py  viz.py
analysis/src/: __init__.py  cli.py  freq_stats.py  io_utils.py  tokenize_zh.py  wordcloud_viz.py
analysis/templates/: report_header.md.j2  section_tables.md.j2
analysis/tests/: __init__.py  test_analysis.py  test_fonts.py  test_freq_stats.py  test_loader.py  test_ngrams.py  test_report.py  test_scraping.py  test_selfcheck.py  test_stats_tfidf.py  test_text_pipeline.py  test_tokenize.py  test_tokenize_zh.py  test_tokenizer.py
analysis/web/: README.md  index.html  wordcloud_data.json
backup_文不加点的张衔瑜/: .gitkeep
data/: dataset_stats.json  sft_val.jsonl
docs/: CLASSIFICATION_GUIDE.md  FUTURE_VISION.md  ISSUES_ANALYSIS_REPORT.md  ISSUES_PROPOSED.md  LLM_FINE_TUNE_README.md  METHODOLOGY.md  README.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING.md
eval/: style_eval.ipynb
examples/: usage_examples.md
prep/: style_sft_builder.py
script/: README.md  TOC.md  copilot_action.prompt.example.md  copilot_discover_TOC.prompt.example.md  demo_discovery.py  discovery_report.json  generate_clone_report.py  wx_publish_backup.py
style_sft/: README.md  prep_style_sft_builder.py  sample_config.yaml
tests/: __init__.py  test_analysis.py  test_ngrams.py  test_scraping.py  test_stats_tfidf.py  test_tokenize.py
tmp/: mini_test_data.txt
tmp/test_corpus/: test1.txt  test2.txt  test3.txt
tmp/test_output/: analysis_results.pkl  report.md  summary.json
train/: lora_sft.yaml
(+1074 files in other folders)
