[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-my-wechat-official-account"
version = "1.0.0"
description = "微信公众号文章备份工具，用于抓取和备份已发布的文章内容"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "张衔瑜", email = "xianyu564@github.com"}
]
maintainers = [
    {name = "张衔瑜", email = "xianyu564@github.com"}
]
keywords = ["wechat", "official-account", "scraper", "backup", "articles", "文不加点的张衔瑜", "公众号备份"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/xianyu564/scrape-my-wechat-official-account"
Documentation = "https://github.com/xianyu564/scrape-my-wechat-official-account#readme"
Repository = "https://github.com/xianyu564/scrape-my-wechat-official-account.git"
"Bug Tracker" = "https://github.com/xianyu564/scrape-my-wechat-official-account/issues"
"Changelog" = "https://github.com/xianyu564/scrape-my-wechat-official-account/blob/master/CHANGELOG.md"
"Original Project" = "https://github.com/xianyu564/wechat_official_backup"

[project.scripts]
scrape-wechat = "script.wx_publish_backup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["script*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["script"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]
